[package]
name = "kaspa-escrow-lab"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Experimental escrow and covenant patterns on Kaspa Testnet 12"
license = "MIT"

[dependencies]
# Kaspa core crates for covenant/script experimentation
kaspa-txscript = "1.1.0-rc.2"
kaspa-consensus-core = "1.1.0-rc.2"
kaspa-addresses = "1.1.0-rc.2"
kaspa-hashes = "1.1.0-rc.2"

# For RPC connection to testnet
kaspa-wrpc-client = "1.1.0-rc.2"
kaspa-rpc-core = "1.1.0-rc.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography
secp256k1 = { version = "0.29", features = ["rand"] }
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Hex encoding
hex = "0.4"

[[example]]
name = "basic_escrow"
path = "examples/basic_escrow.rs"

[[example]]
name = "multisig_escrow"
path = "examples/multisig_escrow.rs"

[[example]]
name = "timelock_escrow"
path = "examples/timelock_escrow.rs"
