[workspace]
members = ["sdk"]

[package]
name = "kaspa-escrow-lab"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
description = "Experimental escrow and covenant patterns on Kaspa Testnet 12"
license = "MIT"

[dependencies]
# SDK crate (extracted)
kaspa-escrow-sdk = { path = "sdk" }
# Kaspa core crates - from the tn12 branch (covenant/KIP-10/KIP-17 support)
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "tn12" }
kaspa-txscript-errors = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "tn12" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "tn12" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "tn12" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "tn12" }

# For RPC connection to testnet
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "tn12" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "tn12" }

# For wallet key derivation (BIP39/BIP32)
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "tn12" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography (match rusty-kaspa's versions)
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling (thiserror 1.x to match rusty-kaspa)
thiserror = "1"
anyhow = "1"

# Hex encoding
hex = "0.4"

# REST API
axum = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[example]]
name = "basic_escrow"
path = "examples/basic_escrow.rs"

[[example]]
name = "multisig_escrow"
path = "examples/multisig_escrow.rs"

[[example]]
name = "timelock_escrow"
path = "examples/timelock_escrow.rs"

[[example]]
name = "covenant_escrow"
path = "examples/covenant_escrow.rs"

[[example]]
name = "amount_constrained_escrow"
path = "examples/amount_constrained_escrow.rs"

[[example]]
name = "connect_test"
path = "examples/connect_test.rs"

[[example]]
name = "live_escrow"
path = "examples/live_escrow.rs"

[[example]]
name = "live_covenant_escrow"
path = "examples/live_covenant_escrow.rs"

[[example]]
name = "live_amount_constrained_escrow"
path = "examples/live_amount_constrained_escrow.rs"

[[example]]
name = "sdk_demo"
path = "examples/sdk_demo.rs"

[[example]]
name = "live_sdk_escrow"
path = "examples/live_sdk_escrow.rs"

[[example]]
name = "check_utxo"
path = "examples/check_utxo.rs"

[[example]]
name = "fund_escrow"
path = "examples/fund_escrow.rs"

[[example]]
name = "live_sdk_escrow_full"
path = "examples/live_sdk_escrow_full.rs"
